<resources>
    <string name="app_name">Descubre El Salvador</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="descubre_el_salvador">Descubre El Salvador</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrate">Registrate</string>
    <string name="municipio">Municipio</string>
    <string name="departamento">Departamento</string>
    <string name="direcci_n_de_residencia">Dirección de residencia</string>
    <string name="contrase">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="usuario">Usuario:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="numer">########</string>
    <string name="agrega_tu_apellido">Apellidos</string>
    <string name="apellido">Apellido:</string>
    <string name="agrega_tu_nombre">Nombres</string>
    <string name="nombre">Nombre</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_menu_slide">MenuSlideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_menu_slider">MenuSliderActivity</string>
    <string name="inicio">Inicio</string>
    <string name="agregar_publicaci_n">Agregar publicación</string>
    <string name="donde_encuentras_todo_lo_que_necesitas">Donde encuentras todo lo que necesitas</string>
    <string name="descubriendo_el_salvador">Descubriendo EL SALVADOR</string>
    <string name="chat">Chat</string>
    <string name="contrase_a">Contraseña</string>
    <string name="numero_de_telefono">Numero de telefono</string>
    <string name="iniciar_sesi">Iniciar sesión</string>
    <string name="facebook">Iniciar con Facebook</string>


    <string-array name="DepartamentosS">
        <item>El Salvador</item>
        <item>Sonsonate</item>
        <item>San Salvador</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_tulo">Título</string>
    <string name="descrip">Breve descripción</string>
    <string name="tel_fonos">Teléfonos</string>
    <string name="fijo"># de teléfono fijo</string>
    <string name="de_celular"># de celular</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="title_activity_mapa_publicacion">Map</string>
    <string name="nuevap">Nueva publicación</string>
    <string name="direcci_n">Dirección</string>
    <string name="addFotos">Agregar fotos</string>
    <string name="tel">Teléfono</string>
    <string name="imagenes">imagenes</string>
    <string name="pregunta">¿Aun no tienes cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="facebook_app_id">2074223582654566</string>
    <string name="fb_login_protocol_scheme">fb2074223582654566</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="ver_mas">Ver mas</string>
    <string name="title_activity_mapa_ruta_publicaciones">Map</string>
    <string name="info">Inormación de perfil</string>
    <string name="editar_publicaci_n">Editar Publicación</string>
    <string name="title_activity_mapa_publicacion_edit">Map</string>
    <string name="editar_fotos">Editar fotos</string>
    <string name="tipo_de_local">Tipo de local</string>
    <string name="filtrar_por">Filtrar por:</string>
    <string name="tipo_de_publicaci_n">Tipo de publicación</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiar_fotos">Cambiar fotos</string>
    <string name="tipo_de_publicaci_n">Tipo de publicación</string>
    <string name="todo">TODO</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="aqui_se_cargara_el_correo">Aqui se cargara el correo</string>
    <string name="cargando">Cargando</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="publicaciones_hechas_por_ti">PUBLICACIONES HECHAS POR TI</string>
    <string name="titulo">TITULO</string>
    <string name="descripci_n">DESCRIPCIÓN</string>
    <string name="aqui_se_cargara_la_descripcion">Aqui se cargara la descripcion</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="contactanos">CONTACTANOS</string>
    <string name="telefono_fijo">TELEFONO FIJO</string>
    <string name="celular">CELULAR</string>
    <string name="mostrar_ruta">MOSTRAR RUTA</string>
    <string name="puntos">..</string>
    <string name="agregar">Agregar</string>
    <string name="username">Username</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>


</resources>
