<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
      android:src="@drawable/esa"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descubre_el_salvador"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <Button
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:drawableLeft="@android:drawable/ic_menu_send"/>
    <Button
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:text="@string/registrate"/>
</LinearLayout>