<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil"
    android:orientation="vertical"
    android:background="@drawable/fondo_edit">

    <LinearLayout
        android:layout_width="179dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="132dp"
            android:layout_height="133dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="254dp"
            android:layout_marginBottom="572dp"
            app:cardCornerRadius="64dp">

            <ImageView
                android:id="@+id/imgPerf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/tolteka"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:gravity="center">

        <TextView
            android:id="@+id/cambioDefoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_foto_de_perfil"
            android:textColor="@color/rojo">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre" />


        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido" />


        <EditText
            android:id="@+id/edtApellido"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel" />


        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departamento" />


        <Spinner
            android:id="@+id/spDepartamento"
            android:layout_width="253dp"
            android:layout_height="23dp"
            android:layout_marginStart="10dp"
            android:background="@color/Blanco"


            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/info"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_electr_nico" />

        <TextView
            android:id="@+id/textCorreo"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:text="@string/aqui_se_cargara_el_correo"
            android:textStyle="bold"/>

    </LinearLayout>



</LinearLayout>