<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/agregarPub"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/agregar_publicaci_n" />
        <item
            android:id="@+id/Restaurante"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Restaurantes" />
        <item
            android:id="@+id/hospedajes"
            android:icon="@drawable/ic_menu_manage"
            android:title="Hospedajes" />
        <item
            android:id="@+id/turicentros"
            android:icon="@drawable/ic_menu_manage"
            android:title="Turicentros" />
        <item
            android:id="@+id/acercaDe"
            android:icon="@drawable/ic_menu_manage"
            android:title="Acerca de nosotros" />
    </group>

    <item android:title="Contactanos">
        <menu>
            <item
                android:id="@+id/chat"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/chat" />

        </menu>
    </item>

</menu>
