<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel_fonos"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/txtTelFijo"
            android:layout_width="308dp"
            android:layout_height="47dp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/inputnegro"
            android:hint="@string/fijo"
            android:paddingLeft="20sp" />


        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="308dp"
            android:layout_height="47dp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/inputnegro"
            android:hint="@string/de_celular"
            android:paddingLeft="20sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnAgregarTel"
            android:layout_width="165dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/boton_publicacion"
            android:text="Agregar"
            android:layout_marginBottom="10dp"
            android:onClick="btnSave"

            />
    </LinearLayout>
</LinearLayout>