<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Publicaciones"
    android:background="@color/transparent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="245dp">

        <LinearLayout
            android:layout_width="381dp"
            android:layout_height="208dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/contorno_negro"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTituloAnuncio"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/cargando"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/txtDescripcionAnuncio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/cargando" />

                <Button
                    android:id="@+id/btnVermasAnuncio"
                    android:layout_width="102dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:background="@drawable/boton_publicacion"
                    android:gravity="center"
                    android:text="@string/ver_mas" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:background="@drawable/contorno_negro"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imgAnuncioList"
                    android:layout_width="334dp"
                    android:layout_height="342dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtIdAnuncio"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>