<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoesa"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d8000000"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="313dp"
            android:layout_height="124dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/descubrelogo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        app:srcCompat="@android:drawable/ic_dialog_email" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/candado"
                        android:paddingLeft="30dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="301dp"
                    android:layout_height="46dp"

                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/input"
                    android:hint="@string/correo_electr_nico"
                    android:paddingLeft="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/Blanco"
                    android:textColorHint="@color/Blanco" />


                <EditText
                    android:id="@+id/etContraseña"
                    android:layout_width="303dp"
                    android:layout_height="48dp"

                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/input"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/Blanco"

                    android:textColorHint="@color/Blanco" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi"
            android:background="@drawable/fondoboton"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="40dp"
            android:onClick="iniciar"
             />

    </LinearLayout>





</RelativeLayout>